# black-wall-mod-system

./: .gitignore  INSTALAR.command  LICENSE-APACHE  LICENSE-MIT  README.md  README.pt.md  README.zh.md  bwms-install.sh
archive-tool/: Cargo.toml  README.md  build.rs
archive-tool/src/: archive.rs  cr2w.rs  datamap.rs  extract.rs  hashes.rs  kraken.rs  main.rs  time.rs  writer.rs
bwms/: Cargo.toml
bwms-core/: Cargo.toml
bwms-core/src/: apply.rs  apply_xl.rs  classify.rs  lib.rs  nexus.rs  theme.rs  xl.rs
bwms-hashes/: Cargo.toml
bwms-hashes/src/: lib.rs
bwms/src/: main.rs
cp77-console/: Cargo.toml  align_linkedit.py  build-core.sh  build.sh  fix-symtab-align.py
cp77-console/src/: ai.rs  api.rs  camscan.rs  cet_catalog.tsv  cet_json.rs  cname.rs  console.rs  crashreport.rs  gum.rs  hooks.rs  hooks_stub.rs  lib.rs  lua.rs  lua_stub.rs  overlay.rs  plugins.rs  register.rs  rtti.rs  selfboot.rs  selftest.rs  targets.rs  tweakdb_bake.rs  tweakdb_rt.rs
example-rust-plugin/: Cargo.toml
example-rust-plugin/src/: lib.rs
input-loader/: Cargo.toml
input-loader/src/: main.rs
mac-mod-manager/: Cargo.toml
mac-mod-manager/src/: install.rs  main.rs  runtime.rs  source.rs  tui.rs
r6/scripts/blackwall-mods/: blackwall-mods.reds  bwms-autocontinue.reds  bwms-settings-poc.reds  bwms-skipintro.reds  bwms-tppcam.reds  callbacksystem-native.reds  codeware-facade.reds  codeware-localization.reds  cw-vector2-utils.reds  cw-vector3-utils.reds  scriptableservice-native.reds
tweakdb-tool/: Cargo.toml  README.md  build.rs  ooz_shim.cpp
tweakdb-tool/src/: hashes.rs  kraken.rs  lib.rs  main.rs  names.rs  template.rs  toml.rs  tweakdb.rs  tweakxl.rs  ui.rs  writer.rs  yaml.rs
tweakdb-tool/src/ui/: index.html
